--- a/templates/default/systemd.erb
+++ b/templates/default/systemd.erb
@@ -2,6 +2,7 @@
 Description=<%= @name %>
 
 [Service]
+Type=forking
 Environment=<%= @environment.map {|key, val| %Q{"#{key}=#{val}"} }.join(' ') %>
 ExecStart=<%= @command %>
 ExecReload=/bin/kill -<%= @reload_signal %> $MAINPID
