--- a/templates/default/upstart.erb
+++ b/templates/default/upstart.erb
@@ -5,6 +5,7 @@ description "<%= @name %>"
 start on runlevel [2345]
 stop on runlevel [!2345]
 
+expect fork
 respawn
 respawn limit 10 5
 umask 022
